--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jasmine-core": "^2.3.4",
     "karma": "^0.12.32",
     "karma-chrome-launcher": "^0.1.12",
-    "karma-jasmine": "^0.3.5"
+    "karma-coverage": "^0.3.1",
+    "karma-jasmine": "^0.3.5",
+    "karma-mocha-reporter": "^1.0.2"
   }
 }
