--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "karma-chrome-launcher": "^0.1.12",
     "karma-coverage": "^0.3.1",
     "karma-jasmine": "^0.3.5",
+    "karma-jasmine-given": "^0.1.1",
     "karma-mocha-reporter": "^1.0.2"
   }
 }
