--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/conorsheehan/ga-javascript-bdd",
   "devDependencies": {
+    "jasmine-ajax": "^3.2.0",
     "jasmine-core": "^2.3.4",
     "jquery": "^2.1.4",
     "karma": "^0.12.32",
